<resources>
    <string name="app_name">Github User</string>
    <string name="version">Version 1.1</string>
    <string name="icon_decription">Github Icon</string>
    <string name="heading_famous_users">Famous Users</string>
    <string name="search_placeholder">type username</string>
    <string name="avatar_description">User Avatar</string>
    <string name="followers_heading">Followers</string>
    <string name="following_heading">Following</string>
    <string name="repo_heading">Repositories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_button">share</string>
    <string name="favorites_menu">favorites_menu</string>
    <string name="mode_menu">mode menu</string>
    <string name="favorites_button">tombol favorite</string>
    <string name="no_favorites_data">No Favorites User</string>
    <string name="fav__btn_desc">favorites</string>
</resources>