<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUserFragment">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/avatar_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/ib_share"
        style="@style/Detail.ShareBtn"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:contentDescription="@string/share_button"
        android:src="@drawable/ic_baseline_share_20"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name"
        app:layout_constraintStart_toEndOf="@+id/tv_name"
        app:layout_constraintTop_toTopOf="@+id/tv_name"
        app:layout_constraintVertical_bias="0.658" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/Detail.Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
        tools:text="Dika Adi Setiawan" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/Detail.Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:text="masdikaid" />

    <TextView
        android:id="@+id/tv_company"
        style="@style/Detail.Others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        tools:text="Google .Inc" />

    <TextView
        android:id="@+id/tv_location"
        style="@style/Detail.Others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_company"
        tools:text="Jakarta Pusat - Indonesia" />

    <TextView
        android:id="@+id/tv_heading_followers"
        style="@style/Detail.Item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/followers_heading"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/tv_heading_following"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <TextView
        android:id="@+id/tv_heading_following"
        style="@style/Detail.Item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/following_heading"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/tv_heading_repositories"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_heading_followers"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <TextView
        android:id="@+id/tv_heading_repositories"
        style="@style/Detail.Item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/repo_heading"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_heading_following"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <TextView
        android:id="@+id/tv_followers_number"
        style="@style/Detail.Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_heading_followers"
        app:layout_constraintStart_toStartOf="@+id/tv_heading_followers"
        app:layout_constraintTop_toBottomOf="@+id/tv_heading_followers"
        tools:text="243" />

    <TextView
        android:id="@+id/tv_following_number"
        style="@style/Detail.Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_heading_following"
        app:layout_constraintStart_toStartOf="@+id/tv_heading_following"
        app:layout_constraintTop_toBottomOf="@+id/tv_heading_following"
        tools:text="250" />

    <TextView
        android:id="@+id/tv_repositories_number"
        style="@style/Detail.Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_heading_repositories"
        app:layout_constraintStart_toStartOf="@+id/tv_heading_repositories"
        app:layout_constraintTop_toBottomOf="@+id/tv_heading_repositories"
        tools:text="31" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_following_number" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_connection_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_connection" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fav_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:contentDescription="@string/favorites_button"
        android:focusable="true"
        android:src="@drawable/ic_baseline_favorite_fill_20"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>