<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUserActivity">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/avatar_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
        tools:text="Dika Adi Setiawan" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:text="Google .Inc" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_company"
        tools:text="Jakarta Pusat - Indonesia" />

    <TextView
        android:id="@+id/tv_heading_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/followers_heading"
        app:layout_constraintEnd_toStartOf="@+id/tv_heading_following"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <TextView
        android:id="@+id/tv_heading_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/following_heading"
        app:layout_constraintEnd_toStartOf="@+id/tv_heading_repositories"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_heading_followers"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <TextView
        android:id="@+id/tv_heading_repositories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/repo_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_heading_following"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <TextView
        android:id="@+id/tv_followers_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_heading_followers"
        app:layout_constraintStart_toStartOf="@+id/tv_heading_followers"
        app:layout_constraintTop_toBottomOf="@+id/tv_heading_followers"
        tools:text="243" />

    <TextView
        android:id="@+id/tv_following_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_heading_following"
        app:layout_constraintStart_toStartOf="@+id/tv_heading_following"
        app:layout_constraintTop_toBottomOf="@+id/tv_heading_following"
        tools:text="250" />

    <TextView
        android:id="@+id/tv_repositories_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_heading_repositories"
        app:layout_constraintStart_toStartOf="@+id/tv_heading_repositories"
        app:layout_constraintTop_toBottomOf="@+id/tv_heading_repositories"
        tools:text="31" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_following_number">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ti_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers_heading" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ti_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following_heading" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_connection_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_connection" />

</androidx.constraintlayout.widget.ConstraintLayout>